[package]
name = "actix-cookie"
version = "0.1.0"
authors = [
    "Near Inc <hello@nearprotocol.com>",
]
description = "Actix adapter for cookies functionality"
repository = "https://github.com/near/actix-extras.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_cookie"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false, features = ["cookies"] }
